# denede

./: .gitignore  Cargo.toml  README.md
src/: dice.rs  main.rs
src/commands/: code.rs  license.rs  mod.rs  necronomicon.rs  ping.rs  roll.rs  src.rs
