[package]
name = "denede"
version = "1.1.2-n0.3.0-2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
futures = "0.3.31"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serenity = { version = "0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder"
] }
tokio = { version = "1.46.1", default-features = false, features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
